<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp">

    <ImageView
        android:id="@+id/iv_video"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_video"
        app:layout_constraintWidth_percent="0.21"
        app:layout_constraintDimensionRatio="1:1.4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/iv_time"
        app:layout_constraintHorizontal_chainStyle="spread" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video"
        android:textColor="#ffffffff"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintVertical_bias="0.85"
        app:layout_constraintStart_toStartOf="@+id/iv_video"
        app:layout_constraintEnd_toEndOf="@+id/iv_video"
        app:layout_constraintTop_toTopOf="@+id/iv_video"
        app:layout_constraintBottom_toBottomOf="@+id/iv_video" />

    <ImageView
        android:id="@+id/iv_time"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_datetime_bg"
        app:layout_constraintWidth_percent="0.21"
        app:layout_constraintDimensionRatio="1:1.4"
        app:layout_constraintTop_toTopOf="@+id/iv_video"
        app:layout_constraintBottom_toBottomOf="@+id/iv_video"
        app:layout_constraintStart_toEndOf="@+id/iv_video"
        app:layout_constraintEnd_toStartOf="@+id/iv_album" />

    <ImageView
        android:id="@+id/iv_album"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_album"
        app:layout_constraintWidth_percent="0.21"
        app:layout_constraintDimensionRatio="1:1.4"
        app:layout_constraintTop_toTopOf="@+id/iv_video"
        app:layout_constraintBottom_toBottomOf="@+id/iv_video"
        app:layout_constraintStart_toEndOf="@+id/iv_time"
        app:layout_constraintEnd_toStartOf="@+id/iv_interconnect" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_album"
        android:textColor="#ffffffff"
        android:textSize="28sp"
        android:textStyle="bold"
        android:paddingHorizontal="3dp"
        android:singleLine="true"
        android:ellipsize="end"
        app:layout_constraintVertical_bias="0.85"
        app:layout_constraintStart_toStartOf="@+id/iv_album"
        app:layout_constraintEnd_toEndOf="@+id/iv_album"
        app:layout_constraintTop_toTopOf="@+id/iv_video"
        app:layout_constraintBottom_toBottomOf="@+id/iv_video" />

    <ImageView
        android:id="@+id/iv_interconnect"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_interconnect"
        app:layout_constraintWidth_percent="0.21"
        app:layout_constraintDimensionRatio="1:1.4"
        app:layout_constraintTop_toTopOf="@+id/iv_video"
        app:layout_constraintBottom_toBottomOf="@+id/iv_video"
        app:layout_constraintStart_toEndOf="@+id/iv_album"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_connect"
        android:textColor="#ffffffff"
        android:textSize="28sp"
        android:textStyle="bold"
        android:paddingHorizontal="3dp"
        android:singleLine="true"
        android:ellipsize="end"
        app:layout_constraintVertical_bias="0.85"
        app:layout_constraintStart_toStartOf="@+id/iv_interconnect"
        app:layout_constraintEnd_toEndOf="@+id/iv_interconnect"
        app:layout_constraintTop_toTopOf="@+id/iv_video"
        app:layout_constraintBottom_toBottomOf="@+id/iv_video" />

    <TextView
        android:id="@+id/tv_temper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        tools:text="30"
        app:layout_constraintTop_toTopOf="@+id/iv_time"
        app:layout_constraintBottom_toBottomOf="@+id/iv_time"
        app:layout_constraintStart_toStartOf="@+id/iv_time"
        app:layout_constraintEnd_toEndOf="@+id/iv_time"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintVertical_bias="0.12"/>

    <TextView
        android:id="@+id/tv_temper_scope"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        tools:text="多云 20/30"
        app:layout_constraintStart_toStartOf="@+id/iv_time"
        app:layout_constraintEnd_toEndOf="@+id/iv_time"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintTop_toBottomOf="@+id/tv_temper"/>

    <ImageView
        android:id="@+id/iv_weather"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:src="@mipmap/ic_launcher"
        app:layout_constraintWidth_percent="0.065"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toTopOf="@+id/tv_temper"
        app:layout_constraintBottom_toBottomOf="@+id/tv_temper_scope"
        app:layout_constraintStart_toStartOf="@+id/iv_time"
        app:layout_constraintEnd_toEndOf="@+id/iv_time"
        app:layout_constraintHorizontal_bias="0.9"/>

    <TextClock
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:format12Hour="@string/aa_hh_mm"
        android:format24Hour="HH:mm"
        android:text="00:00"
        android:textColor="#ffffffff"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintTop_toTopOf="@+id/iv_time"
        app:layout_constraintBottom_toBottomOf="@+id/iv_time"
        app:layout_constraintStart_toStartOf="@+id/iv_time"
        app:layout_constraintEnd_toEndOf="@+id/iv_time" />

    <TextClock
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:format24Hour="@string/yyyy_mm_dd"
        android:format12Hour="@string/yyyy_mm_dd"
        tools:text="2025年3月19日"
        android:textColor="#ffffffff"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintVertical_bias="0.75"
        app:layout_constraintStart_toStartOf="@+id/iv_time"
        app:layout_constraintEnd_toEndOf="@+id/iv_time"
        app:layout_constraintTop_toTopOf="@+id/iv_time"
        app:layout_constraintBottom_toBottomOf="@+id/iv_time" />

    <TextClock
        android:id="@+id/tv_week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:format24Hour="EEE"
        android:format12Hour="EEEE"
        tools:text="周四"
        android:textColor="#ffffffff"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintVertical_bias="0.86"
        app:layout_constraintStart_toStartOf="@+id/iv_time"
        app:layout_constraintEnd_toEndOf="@+id/iv_time"
        app:layout_constraintTop_toTopOf="@+id/iv_time"
        app:layout_constraintBottom_toBottomOf="@+id/iv_time" />

</androidx.constraintlayout.widget.ConstraintLayout>